Replace boxed-primitive constructors with valueOf (CodeQL java/inefficient-boxed-constructor)
Replace 17 uses of the deprecated boxed-primitive constructors
(new Long/Integer/Short/Byte/Character/Float/Double(...)) with the
corresponding X.valueOf(...) factory methods across 6 files. valueOf
avoids an unnecessary allocation and may reuse cached instances; the
change is behavior-preserving (equal values, same equals/hashCode).
Verified by compiling persistit/core, persistit/ui and the jaspi
jwt-session-module, plus javac for the persistit FindFile Ant example.