@@ -12,6 +12,7 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
+ * Portions Copyrighted 2026 3A Systems, LLC
  */
 
 import java.awt.BorderLayout;
@@ -293,7 +294,7 @@ public class FindFile extends JPanel {
             KeyFilter filter = new KeyFilter(ex.getKey());
             if (fixed.length() != 0) {
                 String end = fixed.substring(0, fixed.length() - 1)
-                        + new Character((char) (fixed.charAt(fixed.length() - 1) + 1));
+                        + Character.valueOf((char) (fixed.charAt(fixed.length() - 1) + 1));
                 //
                 // append a Term that selects only the range accepted by the
                 // fixed portion of the name.
